Navbar Typo fix

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     </header>
     <main>
         <section class="gallery">
-            <img src="img/20200831 Lang Vanessa ColorHarmony 2 DGT.jpg" alt="Bird with dark pink feathers and a green skull for a head flying through a pink and green sunset with electrical wires in the distant background.">
+            <img 
+            src="img/20200831 Lang Vanessa ColorHarmony 2 DGT.jpg" alt="Bird with dark pink feathers and a green skull for a head flying through a pink and green sunset with electrical wires in the distant background."/>
         </section>
     </main>
 </body>
